--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
             "NodeType": "vmess",
             "Timeout": 30,
             "ListenIP": "0.0.0.0",
-            "SendIP": "0.0.0.0",
+            "SendIP": "::",
             "DeviceOnlineMinTraffic": 1000,
             "EnableProxyProtocol": false,
             "EnableUot": true,
@@ -61,12 +61,13 @@
             "NodeID": 2,
             "NodeType": "hysteria2",
             "Timeout": 30,
-            "ListenIP": "::",
-            "SendIP": "0.0.0.0",
+            "ListenIP": "0.0.0.0",
+            "SendIP": "::",
             "DeviceOnlineMinTraffic": 1000,
             "TCPFastOpen": true,
             "SniffEnabled": true,
             "EnableDNS": true,
+            "DomainStrategy": "prefer_ipv6",
             "CertConfig": {
                 "CertMode": "self",
                 "RejectUnknownSni": false,
